cmake_minimum_required(VERSION 3.15)
project(Hw5)

set(CMAKE_CXX_STANDARD 11)

add_executable(Hw5 Parcel.H DeliveryCompany.H DeliveryCompany.cpp DeliveryVehicle.H DeliveryVehicle.cpp FastDeliveryCompany.H FastDeliveryCompany.cpp FastDeliveryVehicle.H FastDeliveryVehicle.cpp ProfessionalDeliveryCompany.H ProfessionalDeliveryCompany.cpp ProfessionalDeliveryVehicle.H ProfessionalDeliveryVehicle.cpp)